trade config added, hisitory removed from menu

--- a/polbot-core/src/main/resources/templates/allusers.html
+++ b/polbot-core/src/main/resources/templates/allusers.html
@@ -97,7 +97,7 @@
 
             {{#currencies}}
             <p> {{currencyPair}} </p>
-            <div> {{usableBalancePercent}}
+            <div> {{usableBalance}}
                 {{buyAtPrice}}
                 {{buyOnPercent}}
                 {{sellAtPrice}}
